k8s-apps/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/managed-by: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.corp.mulliken.net
      secretName: grafana-tls
  rules:
    - host: grafana.corp.mulliken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
